language/move-lang/tests/move_check/expansion/duplicate_field_pack.exp
error: 

   ┌── tests/move_check/expansion/duplicate_field_pack.move:4:9 ───
   │
 4 │         S { f: 0, f: 0 };
   │         ^^^^^^^^^^^^^^^^ Invalid construction
   │             - Previously defined here
   │                   - Duplicate argument given for field 'f'
   │

